GNOME Bugzilla – Bug 644783
[region] Drag'n'drop of keyboard layouts crashes
Last modified: 2011-03-15 17:46:59 UTC
The DND code probably frees something it shouldn't. After 2 drops, I get:
+ Trace 226326
My recommendation is to just drop dnd there, doesn't seem very useful.
commit 56eb1b15924cc76919bc0f34ec4b15e3694fdac4 Author: Bastien Nocera <hadess@hadess.net> Date: Tue Mar 15 17:43:09 2011 +0000 region: Make drag'n'drop work By making sure we only store the layouts in the list store, and keep GSettings in sync with the list store, rather than constantly re-reading from GSettings. https://bugzilla.gnome.org/show_bug.cgi?id=644783