region: Make drag'n'drop work

By making sure we only store the layouts in the list store, and keep
GSettings in sync with the list store, rather than constantly re-reading
from GSettings.

https://bugzilla.gnome.org/show_bug.cgi?id=644783